Sixth and final version. Added a CSS Animation hover. You can change it in the style.css file and 'jumbotron: hover' and change transition. VOILA! Thank you to my friends for supporting me through this rough time in my life. You know who you are if you're reading this.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,700" rel="stylesheet">
+
   </head>
 
-  <body onload="fetchBookmarks()">
+  <body onmouseover=""onload="fetchBookmarks()">
 
     <div class="container">
       <div class="header clearfix">
