--- a/index.html
+++ b/index.html
@@ -22,25 +22,27 @@
         </nav>
         <h3 class="text-muted">Bookmarker</h3>
       </div>
+      <div class="jumbotron-container">
 
-      <div class="jumbotron">
-        <h2>Bookmark Your Favorite Site</h2>
-        <form id="myForm">
-            <div class="form-group">
-                <label>Site Name</label>
-                <input type="text" class="form-control" id="siteName" placeholder="Website Name">
+        <div class="jumbotron">
+          <h2>Bookmark Your Favorite Site</h2>
+          <form id="myForm">
+              <div class="form-group">
+                  <label>Site Name</label>
+                  <input type="text" class="form-control" id="siteName" placeholder="Website Name">
+              </div>
+              <div class="form-group">
+                <label>Site URL</label>
+                <input type="text" class="form-control" id="siteUrl" placeholder="Website URL">
             </div>
-            <div class="form-group">
-              <label>Site URL</label>
-              <input type="text" class="form-control" id="siteUrl" placeholder="Website URL">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+  
+        <div class="row marketing">
+          <div class="col-lg-12">
+            <div id="bookmarksResults"></div>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-12">
-          <div id="bookmarksResults"></div>
         </div>
       </div>
 
